--- a/index.html
+++ b/index.html
@@ -5,27 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Launch countdown timer</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  We're launching soon
-
-  Days
-  Hours
-  Minutes
-  Seconds
-  
-  <div class="attribution">
+  <main>
+    <h1>We're launching soon</h1>
+    <div id="countdown">
+      <div class="child" id="iday">
+        <div class="top"></div>
+        <div class="bolLeft bol"></div>
+        <div class="bolRigth bol"></div>
+        <div class="bottom"></div>
+        <p>Days</p>
+      </div>
+      <div class="child" id="ihours">
+        <div class="top"></div>
+        <div class="bolLeft bol"></div>
+        <div class="bolRigth bol"></div>
+        <div class="bottom"></div>
+        <p>Hours</p>
+      </div>
+      <div class="child" id="iminutes">
+        <div class="top"></div>
+        <div class="bolLeft bol"></div>
+        <div class="bolRigth bol"></div>
+        <div class="bottom"></div>
+        <p>Minutes</p>
+      </div>
+      <div class="child" id="isegunds">
+        <div class="top"></div>
+        <div class="bolLeft bol"></div>
+        <div class="bolRigth bol"></div>
+        <div class="bottom"></div>
+        <p>Seconds</p>
+      </div>
+    </div>
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
