--- a/index.html
+++ b/index.html
@@ -11,32 +11,36 @@
 </head>
 <body>
   <main>
-    <h1>We're launching soon</h1>
+    <h1>WE'RE LAUNCHING SOON</h1>
     <div id="countdown">
-      <div class="child" id="iday">
+      <div class="child" >
         <div class="top"></div>
         <div class="bolLeft bol"></div>
+        <p id="iday" class="reloStyle">33</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Days</p>
       </div>
-      <div class="child" id="ihours">
+      <div class="child">
         <div class="top"></div>
         <div class="bolLeft bol"></div>
+        <p  id="ihours"class="reloStyle">33</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Hours</p>
       </div>
-      <div class="child" id="iminutes">
+      <div class="child" >
         <div class="top"></div>
         <div class="bolLeft bol"></div>
+        <p id="iminutes"class="reloStyle">39</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Minutes</p>
       </div>
-      <div class="child" id="isegunds">
+      <div class="child" >
         <div class="top"></div>
         <div class="bolLeft bol"></div>
+        <p id="isegunds"class="reloStyle">36</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Seconds</p>
@@ -44,8 +48,10 @@
     </div>
   </main>
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
   </footer>
 </body>
 </html>
