script de time terminado

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="child" >
         <div class="top"></div>
         <div class="bolLeft bol"></div>
-        <p id="iday" class="reloStyle">33</p>
+        <p id="iday" class="reloStyle">08</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Days</p>
@@ -24,7 +24,7 @@
       <div class="child">
         <div class="top"></div>
         <div class="bolLeft bol"></div>
-        <p  id="ihours"class="reloStyle">33</p>
+        <p  id="ihours"class="reloStyle">24</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Hours</p>
@@ -32,7 +32,7 @@
       <div class="child" >
         <div class="top"></div>
         <div class="bolLeft bol"></div>
-        <p id="iminutes"class="reloStyle">39</p>
+        <p id="iminutes"class="reloStyle">60</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Minutes</p>
@@ -40,7 +40,7 @@
       <div class="child" >
         <div class="top"></div>
         <div class="bolLeft bol"></div>
-        <p id="isegunds"class="reloStyle">36</p>
+        <p id="isegunds"class="reloStyle">60</p>
         <div class="bolRigth bol"></div>
         <div class="bottom"></div>
         <p>Seconds</p>
@@ -53,5 +53,6 @@
       Coded by <a href="#">Your Name Here</a>.
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
