--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     </div>
   </main>
   <footer class="attribution">
+    <div id="face" class="img"></div>
+    <div id="inta" class="img"></div>
+    <div id="pint" class="img"></div>
     <div>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
